pingpong-envoy/cli/cli-envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          add_user_agent: true
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: /tmp/admin_access.log
          use_remote_address: true
          route_config:
            virtual_hosts:
            - name: grpc
              domains: ["*"]
              routes:
                - match: { prefix: "/" }
                  route:
                    cluster: token_service
              cors:
                allow_origin_string_match: [{
                  exact: "*"
                }]
                allow_credentials: true
                allow_methods: GET, PUT, DELETE, POST, PATCH, OPTIONS
                allow_headers: actoken,rftoken,content-type,origin,authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                expose_headers: custom-header-1,grpc-status,grpc-message,x-envoy-upstream-service-time
                max_age: "1728000"
          http_filters:
          - name: envoy.filters.http.grpc_http1_bridge
          - name: envoy.filters.http.cors
          - name: envoy.filters.http.router
          
  clusters:
  - name: token_service
    type: logical_dns
    dns_lookup_family: V4_ONLY
    lb_policy: round_robin
    connect_timeout: 0.250s
    http_protocol_options: {}
    load_assignment:
      cluster_name: token_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: envoypp
                port_value: 8080
